<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.mat.familytracker.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_title"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/family_logo" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Family Tracker"
        android:textColor="@android:color/white"
        android:textSize="45dp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:gravity="bottom"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spr_ctry_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:hint="@string/enter_email"
                android:inputType="phone"
                android:maxLines="1"
                android:text="" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_password"
                android:inputType="text"
                android:visibility="gone" />


            <Button
                android:id="@+id/login_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:visibility="gone" />


            <Button
                android:id="@+id/login_btn_find_fnds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/join_family"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/login_txt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/no_account"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>